--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -295,7 +295,7 @@ svg {
 }
 
 .login-form input:focus {
-    box-shadow: 0 0 10px #c3e2dc;
+    box-shadow: 0 0 1rem #c3e2dc;
     border-color: #c3e2dc;
     outline: #c3e2dc;
 }
@@ -489,7 +489,7 @@ svg {
 }
 
 .register-form input:focus {
-    box-shadow: 0 0 10px #c3e2dc;
+    box-shadow: 0 0 1rem #c3e2dc;
     border-color: #c3e2dc;
     outline: #c3e2dc;
 }
@@ -810,7 +810,7 @@ svg {
 
 .main-nav {
     background-color: #c3e2dc;
-    border-bottom: 1px solid #f37136;
+    border-bottom: 0.1rem solid #f37136;
     padding: 0.5rem 0;
 }
 
@@ -844,7 +844,7 @@ svg {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.2rem solid transparent;
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -871,7 +871,7 @@ svg {
     font-size: 1.5rem;
     padding: 0;
     margin: 0;
-    margin-left: 4rem;
+    margin-left: 5rem;
 }
 .inline-flex button:hover {
     color: #f37136;
@@ -930,6 +930,9 @@ svg {
     .rounded-md button {
         font-size: 0.9rem;
     }
+    #nav-starts {
+        padding: 0.4rem !important;
+    }
 }
 @media screen and (min-width: 320px) and (max-width: 639px) {
     .responsive-nav-text {
@@ -981,6 +984,25 @@ svg {
     }
 }
 
+#nav-starts {
+    padding: 0.8rem;
+    border-radius: 0.5rem;
+    border-width: 0.1rem;
+    border: 0.2rem solid #f37136;
+    gap: 0.3rem;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+#nav-starts:hover {
+    background-color: #f37136;
+    color: #ffffff;
+    border-color: #f37136;
+}
+
+#nav-responsive-starts {
+    color: #f37136;
+}
+
 /* COMPONENTE CARD DE AMIGOS */
 
 .container-friends-card {
@@ -1014,28 +1036,29 @@ svg {
 .more-button {
     padding: 0.9rem 3rem;
     font-size: 1.6rem;
-    background: #f37136;
-    color: #fff;
+    background: #ffffff;
+    color: #f37136;
     border-radius: 2.4rem;
     font-family: Poppins-SemiBold, sans-serif;
     transition: all 0.2s;
     cursor: pointer;
-    border: none;
+    border: #f37136 0.3rem solid;
 }
 
 .more-button:hover {
     transform: translateY(-0.2rem);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-    background: #fde3d7;
-    color: #f37136;
+    background: #f37136;
+    color: #fff;
     transition: 0.5s;
+    border: none;
 }
 
 .more-button:active {
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    background: #fde3d7;
-    color: #f37136;
+    background: #f37136;
+    color: #fff;
 }
 
 .friends-card img {
@@ -1167,10 +1190,11 @@ svg {
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 40rem;
+    height: 44rem;
     cursor: pointer;
     background-color: #000;
     image-rendering: auto;
+    box-sizing: border-box;
 }
 
 .overlay {
@@ -1207,17 +1231,17 @@ svg {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
-    padding: 10px;
+    padding: 1rem;
     box-sizing: border-box;
     opacity: 0;
     transition: opacity 0.3s ease;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     overflow-y: auto;
     max-height: 40rem;
     padding-top: 2rem;
+    justify-content: flex-start;
 }
 
 .movie-card:hover .movie-details {
@@ -1225,12 +1249,37 @@ svg {
 }
 
 .movie-details p {
-    margin: 5px 0;
+    margin: 0.5rem 0;
     text-align: left;
     font-size: 1.2rem;
     white-space: normal;
-    text-align: justify;
-    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    height: auto;
+}
+
+.movie-details.expanded p {
+    -webkit-line-clamp: unset;
+    overflow: visible;
+}
+
+.cta-secondary {
+    background-color: #f37136;
+    background: #f37136;
+    color: white;
+    border-radius: 2rem;
+    transition: all 0.2s;
+    font-family: Poppins-Regular, sans-serif;
+    color: white;
+    padding: 0.9rem 1.6rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
 .movie-card-title {
@@ -1238,20 +1287,27 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
     font-family: Raleway-SemiBold, sans-serif;
     font-size: 2rem;
     color: #093266;
+    height: 13rem;
 }
 
 .movie-card-title h3 {
-    margin: 10px 0;
+    margin: 1rem 0;
     text-align: center;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .movie-card-head {
     display: flex;
-    gap: 3rem;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    height: 8rem;
 }
 
 .pagination {
@@ -1321,7 +1377,7 @@ svg {
 }
 
 .search-input-wrapper input:focus {
-    box-shadow: 0 0 10px #c3e2dc;
+    box-shadow: 0 0 1rem #c3e2dc;
     border-color: #c3e2dc;
     outline: #c3e2dc;
 }
@@ -1344,7 +1400,7 @@ svg {
 
 .search-result-card {
     display: flex;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
     flex-direction: column;
     gap: 2rem;
 }
@@ -1385,8 +1441,16 @@ svg {
 }
 
 .search-icon input[type="text"] {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+
+.search-overview {
+    display: flex;
+    justify-content: flex-start;
+    font-family: Raleway-Regular, sans-serif;
+    font-size: 1.4rem;
+    color: #093266;
 }
 
 @media screen and (min-width: 425px) and (max-width: 659px) {
@@ -1463,7 +1527,7 @@ svg {
 }
 
 .profile-form-text input:focus {
-    box-shadow: 0 0 10px #c3e2dc;
+    box-shadow: 0 0 1rem #c3e2dc;
     border-color: #c3e2dc;
     outline: #c3e2dc;
 }
@@ -1533,7 +1597,7 @@ svg {
 }
 
 .update-password-text input:focus {
-    box-shadow: 0 0 10px #c3e2dc;
+    box-shadow: 0 0 1rem #c3e2dc;
     border-color: #c3e2dc;
     outline: #c3e2dc;
 }
@@ -1705,7 +1769,7 @@ svg {
     right: 1.5rem;
     background: transparent;
     border: none;
-    font-size: 24px;
+    font-size: 2.4rem;
     cursor: pointer;
     z-index: 1;
     color: #093266;
@@ -1772,5 +1836,103 @@ svg {
     .details-movie {
         margin: 0;
         text-align: center;
+    }
+}
+
+/*LOADER*/
+
+.spinner {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 2rem;
+    height: 2rem;
+}
+.lds-spinner {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.lds-spinner div {
+    transform-origin: 4rem 4rem;
+    animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0.3rem;
+    left: 3.7rem;
+    width: 0.6rem;
+    height: 1.8rem;
+    border-radius: 20%;
+    background: #f37136;
+}
+.lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+}
+@keyframes lds-spinner {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .lds-spinner {
+        width: 8rem;
+        height: 8rem;
+        left: 50%;
+        top: 25%;
+        transform: translate(-50%, -25%);
     }
 }
